dev/tests/cases/neg/38_raven_bad_target.tv
df main() -> void {
    raven trim("  x  ");
}
